--- a/eg/canvas/太极图.html
+++ b/eg/canvas/太极图.html
@@ -15,7 +15,8 @@
 		canvas.height = 800;
 		// 开始绘制
 		let cxt = canvas.getContext("2d");
-		let radius = 380; // 太极图的半径
+		// 太极图的半径
+		let radius = 380;
 
 		// 绘制两个半圆并且填充颜色
 		circular(cxt, canvas.width / 2, canvas.height / 2, "black", true);
